[fix] docker-compose implementation